files/request-timeout/virtual-service-reviews-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
  - destination:
    host: reviews
    subset: v2
    timeout: 0.5s
